--- a/40-Exercicios-em-Javascript/exercicio-10-12-12a/assets/style.css
+++ b/40-Exercicios-em-Javascript/exercicio-10-12-12a/assets/style.css
@@ -1,10 +1,12 @@
-*{
+body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     background-color: lightgray;
     font-family: "RocknRoll One", sans-serif;
 }
+
+
 
 .container-input{
     display: flex;
@@ -17,7 +19,7 @@
 .container-input span{
     font-size: 20px;
     text-decoration: underline;
-    color: brown;
+    color: white;
 }
 
 .container-input input{
@@ -54,3 +56,21 @@
     color: aliceblue;
 }
 
+.container-colors{
+    display: flex;
+    justify-content: space-between;
+    margin: 25px;
+    padding: 8px;
+}
+
+.container-colors :first-child{
+    width: 30%;
+    background: green;
+    color: white;
+}
+
+.container-colors :last-child{
+    width: 30%;
+    background-color: red;
+    color: white;
+}
